fixing skill list bullet visual bug on dark mode mobile

--- a/styles/html-scss/base/_dark-mode.scss
+++ b/styles/html-scss/base/_dark-mode.scss
@@ -137,8 +137,8 @@ body.dark-mode {
 					position: absolute;
 					left: 50%;
 					top: 50%;
-					width: 30px;
-					height: 30px;
+					width: 20px;
+					height: 20px;
 					background-color: #fff;
 					border-radius: 100%;
 					transform: translate(-50%, -50%);
